--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -4,6 +4,6 @@ git hack \- cut a new feature branch off the main branch.
 .SH "SYNOPSIS"
 \fIgit hack\fR <branchname>
 .SH "DESCRIPTION"
-Pull updates for the main branch and creates a new feature branch off it.
+Pulls updates for the main branch and creates a new feature branch off it.
 .br
 Brings over all uncommitted changes.
