--- a/man/man1/git-extract.1
+++ b/man/man1/git-extract.1
@@ -1,4 +1,4 @@
-.TH "GIT-HACK" "1" "10/21/2014" "Git Town 0\&.3\&.0" "Git Town Manual"
+.TH "GIT-EXTRACT" "1" "10/21/2014" "Git Town 0\&.3\&.0" "Git Town Manual"
 
 .SH NAME
 git hack \- cut a new feature branch off the main branch.
@@ -14,7 +14,8 @@ given name off it.
 Brings over all uncommitted changes.
 
 .SH OPTIONS
-.IP "--abort" 9
+.IP "--abort"
 Aborts a failed
 .B git-hack
 and resets the workspace to how it was before running this command
+
