--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -4,11 +4,26 @@ git sync \- synchronizes a feature branch
 .SH "SYNOPSIS"
 \fIgit sync\fR
 .SH "DESCRIPTION"
-Pulls updates for the main and the feature branch,
-merges updates from the main branch into the feature branch,
-and pushes everything to the remote.
+Synchronizes the current branch with the rest of the world.
+
 .br
+* pulls updates for the main and the feature branch
+.br
+* merges updates from the main branch into the feature branch
+.br
+* pushes everything to the remote
 
 .br
 The result is an up-to-date feature branch that can be merged into the main
 branch without conflicts.
+
+.SH OPTIONS
+.IP "--abort" 12
+Aborts a failed
+.B git-sync
+and resets the workspace to how it was before running this command
+
+.IP "--continue" 12
+Continues a failed
+.B git-sync
+after the conflicts have been resolved.
