--- a/man/man1/git-extract.1
+++ b/man/man1/git-extract.1
@@ -1,21 +1,20 @@
 .TH "GIT-EXTRACT" "1" "10/21/2014" "Git Town 0\&.3\&.0" "Git Town Manual"
 
 .SH NAME
-git hack \- cut a new feature branch off the main branch.
+git extract \- copies selected commits from the current feature branch
+into their own feature branch
 
 .SH SYNOPSIS
-\fIgit hack\fR <branchname>
+\fIgit extract\fR <branchname>
 
 .SH DESCRIPTION
-Pulls updates for the main branch and creates a new feature branch with the
-given name off it.
+Displays a UI for selecting the commits in the current feature branch,
+and cherry-picks the selected ones into the specified feature branch
 .br
-.br
-Brings over all uncommitted changes.
 
 .SH OPTIONS
-.IP "--abort"
+.IP "--abort" 9
 Aborts a failed
-.B git-hack
+.B git-extract
 and resets the workspace to how it was before running this command
 
