--- a/man/man1/git-extract.1
+++ b/man/man1/git-extract.1
@@ -16,5 +16,5 @@ and cherry-picks the selected ones into the specified feature branch
 .IP "--abort" 9
 Aborts a failed
 .B git-extract
-and resets the workspace to how it was before running this command
+and resets the workspace back to a consistent state.
 
