--- a/man/man1/git-sync-fork.1
+++ b/man/man1/git-sync-fork.1
@@ -28,4 +28,4 @@ The result is an up-to-date forked repository.
 .IP "--abort" 9
 Aborts a failed
 .B git-sync-fork
-and resets the workspace to how it was before running this command
+and resets the workspace back to a consistent state.
