--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -17,4 +17,4 @@ Brings over all uncommitted changes.
 .IP "--abort" 9
 Aborts a failed
 .B git-hack
-and resets the workspace to how it was before running this command
+and resets the workspace back to a consistent state.
