--- a/man/man1/git-sync-fork.1
+++ b/man/man1/git-sync-fork.1
@@ -7,22 +7,12 @@ git sync-fork \- synchronizes a forked repository
 \fIgit sync-fork\fR
 
 .SH "DESCRIPTION"
-Syncs the main branch with the upstream repository
+Pulls updates from the upstream main branch into the main branch of this repository.
 
 If your respository is on GitHub, the git remote
 .B upstream
 will be automatically set on first use.
 
-.br
-* git checkout [main branch name]
-.br
-* git pull upstream
-.br
-* git push
-.br
-
-.br
-The result is an up-to-date forked repository.
 
 .SH OPTIONS
 .IP "--abort" 9
