--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -25,4 +25,4 @@ leading to linear history on the main branch.
 .IP "--abort" 9
 Aborts a failed
 .B git-ship
-and resets the workspace back to a consistent state.
+and resets the workspace back into a consistent state.
