--- a/man/man1/git-sync-fork.1
+++ b/man/man1/git-sync-fork.1
@@ -18,4 +18,4 @@ will be automatically set on first use.
 .IP "--abort" 9
 Aborts a failed
 .B git-sync-fork
-and resets the workspace back to a consistent state.
+and resets the workspace back into a consistent state.
