--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -24,7 +24,7 @@ branch without conflicts.
 .IP "--abort" 12
 Aborts a failed
 .B git-sync
-and resets the workspace back to a consistent state.
+and resets the workspace back into a consistent state.
 
 .IP "--continue" 12
 Continues a failed
