--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -1,9 +1,20 @@
 .TH "GIT-HACK" "1" "10/21/2014" "Git Town 0\&.3\&.0" "Git Town Manual"
-.SH "NAME"
+
+.SH NAME
 git hack \- cut a new feature branch off the main branch.
-.SH "SYNOPSIS"
+
+.SH SYNOPSIS
 \fIgit hack\fR <branchname>
-.SH "DESCRIPTION"
-Pull updates for the main branch and creates a new feature branch off it.
+
+.SH DESCRIPTION
+Pulls updates for the main branch and creates a new feature branch with the
+given name off it.
+.br
 .br
 Brings over all uncommitted changes.
+
+.SH OPTIONS
+.IP "--abort" 9
+Aborts a failed
+.B git-hack
+and resets the workspace back into a consistent state.
