--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -16,7 +16,7 @@ Git Town provides the following commands.
 .IP "\fBgit hack\fR" 20
 Create a new feature branch
 .IP "\fBgit sync\fR" 20
-Synchronize a feature branch with the rest of the world
+Synchronize the current branch with the rest of the world
 .IP "\fBgit ship\fR" 20
 Merge a completed feature branch into the main development branch
 .IP "\fBgit sync-fork\fR" 20
