Document the undo option

--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -12,3 +12,8 @@ as well as the remote repository.
 
 .br
 Does not delete non-feature branches or the main branch.
+
+
+.SH OPTIONS
+.IP "--undo" 8
+Restores the last deleted Git branch.
