--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -1,32 +1,45 @@
 .TH "GIT-SYNC" "1" "10/21/2014" "Git Town 0\&.3\&.0" "Git Town Manual"
 
 .SH "NAME"
-git sync \- synchronizes a feature branch
+git sync \- synchronize the current branch
 
 .SH "SYNOPSIS"
 \fIgit sync\fR
+.br
+\fIgit sync\fR --abort
+.br
+\fIgit sync\fR --continue
 
 .SH "DESCRIPTION"
 Synchronizes the current branch with the rest of the world.
 
+.PP
+When run on a feature branch
 .br
-* pulls updates for the main and the feature branch
+* syncs the main branch
 .br
-* merges updates from the main branch into the feature branch
+* pulls updates for the current branch
 .br
-* pushes everything to the remote
+* merges the main branch into the current branch
+.br
+* pushes the current branch
 
+.PP
+When run on the main branch or a non-feature branch
 .br
-The result is an up-to-date feature branch that can be merged into the main
-branch without conflicts.
+* pulls and pushes updates for the current branch
+.br
+* pushes tags
 
 .SH OPTIONS
-.IP "--abort" 12
-Aborts a failed
-.B git-sync
-and resets the workspace back into a consistent state.
+.PP
+--abort
+.RS 4
+Cancel the operation and reset the workspace to a consistent state.
+.RE
 
-.IP "--continue" 12
-Continues a failed
-.B git-sync
-after the conflicts have been resolved.
+.PP
+--continue
+.RS 4
+Continue the operation after resolving conflicts.
+.RE
