--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -32,14 +32,8 @@ When run on the main branch or a non-feature branch
 * pushes tags
 
 .SH OPTIONS
-.PP
---abort
-.RS 4
+.IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
-.RE
 
-.PP
---continue
-.RS 4
+.IP "--continue" 4
 Continue the operation after resolving conflicts.
-.RE
