--- a/man/man1/git-extract.1
+++ b/man/man1/git-extract.1
@@ -18,20 +18,11 @@ If no commits are provided, prompts the user to select from a list of commits un
 * cherry pick commits
 
 .SH OPTIONS
-.PP
-<branchname>
-.RS 4
+.IP "<branchname>" 4
 The name of the branch to create.
-.RE
 
-.PP
-<commit>
-.RS 4
+.IP "<commit>" 4
 SHA to be cherry-picked into the new branch.
-.RE
 
-.PP
---abort
-.RS 4
+.IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
-.RE
