--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -14,8 +14,5 @@ Sync the main branch and create a new feature branch with the given name.
 Brings over all uncommitted changes.
 
 .SH OPTIONS
-.PP
---abort
-.RS 4
+.IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
-.RE
