--- a/man/man1/git-sync-fork.1
+++ b/man/man1/git-sync-fork.1
@@ -13,8 +13,5 @@ Pulls updates from the upstream main branch into the main branch of this reposit
 If your repository is on GitHub, the git remote \fBupstream\fR will be automatically set on first use.
 
 .SH OPTIONS
-.PP
---abort
-.RS 4
+.IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
-.RE
