--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -12,8 +12,5 @@ git kill \- kill an obsolete feature branch
 Deletes the branch from the local and remote repositories.
 
 .SH OPTIONS
-.PP
---undo
-.RS 4
+.IP "--undo" 4
 Undo the previous operation
-.RE
