--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -1,19 +1,16 @@
 .TH "GIT-KILL" "1" "10/21/2014" "Git Town 0\&.3\&.0" "Git Town Manual"
 
 .SH "NAME"
-git kill \- kills an obsolete feature branch
+git kill \- kill an obsolete feature branch
 
 .SH "SYNOPSIS"
 \fIgit kill\fR
+.br
+\fIgit kill\fR --undo
 
 .SH "DESCRIPTION"
-Deletes the branch from the local developer machine
-as well as the remote repository.
-
-.br
-Does not delete non-feature branches or the main branch.
-
+Deletes the branch from the local and remote repositories.
 
 .SH OPTIONS
-.IP "--undo" 8
-Restores the last deleted Git branch.
+.IP "--undo" 4
+Undo the previous operation
