Add git kill to git-town man page

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -21,6 +21,10 @@ copy selected commits from the current branch into their own branch
 cut a new feature branch off the main branch.
 
 .TP 4
+.B git kill
+kill an obsolete feature branch
+
+.TP 4
 .B git prune-branches
 delete merged branches
 
