Update man pages also

--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -1,7 +1,7 @@
 .TH "GIT-SHIP" "1" "11/13/2014" "Git Town 0\&.4\&.0" "Git Town Manual"
 
 .SH "NAME"
-git ship \- ships a completed feature branch
+git ship \- delivers a completed feature branch
 
 .SH "SYNOPSIS"
 \fIgit ship\fR [<branchname>] [-m <message>]
