Update git-town man page

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -22,7 +22,7 @@ cut a new feature branch off the main branch.
 
 .TP 4
 .B git kill
-kill an obsolete feature branch
+remove an obsolete feature branch
 
 .TP 4
 .B git prune-branches
