--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -1,7 +1,7 @@
 .TH "GIT-SYNC" "1" "11/13/2014" "Git Town 0\&.4\&.0" "Git Town Manual"
 
 .SH "NAME"
-git sync \- updates the current branch
+git sync \- updates the current branch with all relevant changes
 
 .SH "SYNOPSIS"
 \fIgit sync\fR
