--- a/man/man1/git-sync-fork.1
+++ b/man/man1/git-sync-fork.1
@@ -1,7 +1,7 @@
 .TH "GIT-SYNC-FORK" "1" "11/13/2014" "Git Town 0\&.4\&.0" "Git Town Manual"
 
 .SH "NAME"
-git sync-fork \- pulls upstream updates into a forked repository
+git sync-fork \- pull upstream updates into a forked repository
 
 .SH "SYNOPSIS"
 \fIgit sync-fork\fR
