update git-town man page

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -18,7 +18,7 @@ copy selected commits from the current branch into their own branch
 
 .TP 4
 .B git hack
-cut a new feature branch off the main branch.
+cut a new feature branch off the main branch
 
 .TP 4
 .B git kill
@@ -30,12 +30,12 @@ delete merged branches
 
 .TP 4
 .B git ship
-ships a completed feature branch
+deliver a completed feature branch
 
 .TP 4
 .B git sync
-synchronize the current branch
+update the current branch with all relevant changes
 
 .TP 4
 .B git sync-fork
-synchronize a forked repository
+pull upstream updates into a forked repository
