--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -23,4 +23,4 @@ The name of the branch to remove.
 If not provided, removes the current branch.
 
 .IP "--undo" 4
-Restore the last deleted Git branch.
+undo the previous `git kill` operation
