--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -25,6 +25,10 @@ cut a new feature branch off the main branch
 remove an obsolete feature branch
 
 .TP 4
+.B git pr
+open the browser for a new pull request
+
+.TP 4
 .B git prune-branches
 delete merged branches
 
