--- a/man/man1/git-pr.1
+++ b/man/man1/git-pr.1
@@ -9,4 +9,4 @@ git-pr \- create a new pull request
 .SH "DESCRIPTION"
 Opens a browser to a new pull request for the current branch.
 .br
-Supported only for repositories hosted on Github and Bitbucket.
+Supported only for repositories hosted on GitHub and Bitbucket.
