--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -10,7 +10,8 @@ git kill \- remove an obsolete feature branch
 
 
 .SH "DESCRIPTION"
-Deletes the current/given branch from the local and remote repositories.
+Deletes the current branch, or <branchname> if given,
+from the local and remote repositories.
 
 .br
 Does not delete non-feature branches nor the main branch.
@@ -23,4 +24,4 @@ The name of the branch to remove.
 If not provided, removes the current branch.
 
 .IP "--undo" 4
-undo the previous `git kill` operation
+Undo the previous "git kill" operation
