Update git-ship documentation

--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -33,3 +33,6 @@ If not provided, will be prompted for it.
 
 .IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
+
+.IP "--continue" 4
+Continue the operation after resolving conflicts.
