Fixed git kill manpage formatting

--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -3,11 +3,10 @@
 .SH "NAME"
 git kill \- remove an obsolete feature branch
 
-
 .SH "SYNOPSIS"
-\fIgit kill [<branchname>]\fR
+\fIgit kill\fR [<branchname>]
+.br
 \fIgit kill\fR --undo
-
 
 .SH "DESCRIPTION"
 Deletes the current branch, or <branchname> if given,
