Standardized man "code", minor formatting changes

--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -11,13 +11,10 @@ git kill \- remove an obsolete feature branch
 .SH "DESCRIPTION"
 Deletes the current branch, or <branchname> if given,
 from the local and remote repositories.
-
 .br
 Does not delete non-feature branches nor the main branch.
 
-
-.SH OPTIONS
-
+.SH "OPTIONS"
 .IP "<branchname>" 4
 The name of the branch to remove.
 If not provided, removes the current branch.
