--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -31,7 +31,7 @@ When run on the main branch or a non-feature branch
 .br
 * pushes tags
 
-.SH OPTIONS
+.SH "OPTIONS"
 .IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
 
