--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -10,7 +10,7 @@ For more information, please visit
 .br
 \fihttps://github.com/Originate/git-town\fR
 
-.SH COMMANDS
+.SH "COMMANDS"
 
 .TP 4
 .B git extract
