git-repo documentation

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -33,6 +33,10 @@ create a new pull request
 delete merged branches
 
 .TP 4
+.B git repo
+view the repository homepage
+
+.TP 4
 .B git ship
 deliver a completed feature branch
 
