--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -22,7 +22,7 @@ into the main branch, leading to linear history on the main branch.
 .br
 * deletes <branchname> from the local and remote repositories
 
-.SH OPTIONS
+.SH "OPTIONS"
 .IP "<branchname>" 4
 The branch to ship.
 .br
