Added missing explanation for git-hack

--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -14,5 +14,8 @@ Sync the main branch and create a new feature branch with the given name.
 Brings over all uncommitted changes.
 
 .SH "OPTIONS"
+.IP "<branchname>" 4
+The name of the branch to create.
+
 .IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
