--- a/man/man1/git-pr.1
+++ b/man/man1/git-pr.1
@@ -1,4 +1,4 @@
-.TH "GIT-PRUNE-BRANCHES" "1" "12/02/2014" "Git Town 0\&.4\&.1" "Git Town Manual"
+.TH "GIT-PR" "1" "12/02/2014" "Git Town 0\&.4\&.1" "Git Town Manual"
 
 .SH "NAME"
 git-pr \- create a new pull request
