--- a/man/man1/git-prune-branches.1
+++ b/man/man1/git-prune-branches.1
@@ -7,4 +7,4 @@ git-prune-branches \- delete merged branches
 \fIgit prune-branches\fR
 
 .SH "DESCRIPTION"
-Deletes merged branches in the local and remote repositories
+Deletes merged branches in the local and remote repositories.
