Man page/documentation cleanup
Squashed commit of the following:

commit c7245427d4caf40ee469fdf29b49ce0448826949
Merge: c1f229b bc0fddc
Author: Allen Wu <allen.wu@originate.com>
Date:   Fri Dec 12 21:12:24 2014 -0800

    Merge branch 'master' into aw-fix-kill-manpage

commit c1f229bf10d1ded99a3838bbdfc797f93094c25a
Author: Allen Wu <allen.wu@originate.com>
Date:   Fri Dec 12 18:23:48 2014 -0800

    Condense git-town manpage

commit 20bb4bed843b1b56eee8027c2a96af6086caa5cc
Author: Allen Wu <allen.wu@originate.com>
Date:   Fri Dec 12 18:04:29 2014 -0800

    Small fixes

commit ef7fd1361fd5df403e0678e4b8761d2518040b75
Author: Allen Wu <allen.wu@originate.com>
Date:   Fri Dec 12 17:57:42 2014 -0800

    Added missing explanation for git-hack

commit 1ffcf7491dcf181dacf384ad379ba166d1962edb
Author: Allen Wu <allen.wu@originate.com>
Date:   Fri Dec 12 17:51:28 2014 -0800

    Newline

commit 6dc0651a1a8ae84d2a6e9530c15b36d3f58d8fe3
Author: Allen Wu <allen.wu@originate.com>
Date:   Fri Dec 12 17:41:05 2014 -0800

    Missed one

commit eca97d45561974cac96e8058bce579f949384953
Author: Allen Wu <allen.wu@originate.com>
Date:   Fri Dec 12 15:33:21 2014 -0800

    Standardized man "code", minor formatting changes

commit 17e73c017b3105d1285a84861611f2ae565e72b9
Author: Allen Wu <allen.wu@originate.com>
Date:   Wed Dec 10 15:53:42 2014 -0800

    Fixed git kill manpage formatting

--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -3,24 +3,21 @@
 .SH "NAME"
 git kill \- remove an obsolete feature branch
 
-
 .SH "SYNOPSIS"
-\fIgit kill [<branchname>]\fR
+\fIgit kill\fR [<branchname>]
+.br
 \fIgit kill\fR --undo
-
 
 .SH "DESCRIPTION"
 Deletes the current branch, or <branchname> if given,
 from the local and remote repositories.
-
 .br
 Does not delete non-feature branches nor the main branch.
 
-
-.SH OPTIONS
-
+.SH "OPTIONS"
 .IP "<branchname>" 4
 The name of the branch to remove.
+.br
 If not provided, removes the current branch.
 
 .IP "--undo" 4
