--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -22,13 +22,15 @@ into the main branch, leading to linear history on the main branch.
 .br
 * deletes <branchname> from the local and remote repositories
 
-.SH OPTIONS
+.SH "OPTIONS"
 .IP "<branchname>" 4
 The branch to ship.
+.br
 If not provided, uses the current branch.
 
 .IP "-m <message>" 4
 The commit message for the squash merge.
+.br
 If not provided, will be prompted for it.
 
 .IP "--abort" 4
