--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -27,6 +27,9 @@ For more information, please visit
 .B git prune-branches
 - delete merged branches
 
+.B git repo
+- view the repository homepage
+
 .B git ship
 - deliver a completed feature branch
 
