--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -1,40 +1,65 @@
 .TH "GIT-TOWN" "1" "12/02/2014" "Git Town 0\&.4\&.1" "Git Town Manual"
 
-.SH "DESCRIPTION"
-Git Town is a collection of additional Git commands that help implement
-higher-level Git workflows like GitHub flow:
+.SH "SYNOPSIS"
+\fIgit town\fR config
 .br
-(\fIhttp://guides.github.com/introduction/flow/index.html\fR)
+\fIgit town\fR help
+.br
+\fIgit town\fR main-branch [<branchname>]
+.br
+\fIgit town\fR non-feature-branches [--add|--remove [<branchname>]]
+.br
+\fIgit town\fR version
 
-For more information, please visit
-.br
-\fihttps://github.com/Originate/git-town\fR
+
+.SH "DESCRIPTION"
+Git Town is a collection of additional Git commands that help implement higher-level Git workflows like GitHub Flow.
+
+For more information and full documentation, please visit: \fihttps://github.com/Originate/git-town\fR
+
 
 .SH "COMMANDS"
+\fBgit extract\fR         Copy selected commits from the current branch into their own branch
+.br
+\fBgit hack\fR            Cut a new feature branch off the main branch
+.br
+\fBgit kill\fR            Remove an obsolete feature branch
+.br
+\fBgit pr\fR              Create a new pull request
+.br
+\fBgit prune-branches\fR  Delete merged branches
+.br
+\fBgit repo\fR            View the repository homepage
+.br
+\fBgit ship\fR            Deliver a completed feature branch
+.br
+\fBgit sync\fR            Update the current branch with all relevant changes
+.br
+\fBgit sync-fork\fR       Pull upstream updates into a forked repository
 
-.B git extract
-- copy selected commits from the current branch into their own branch
+All commands listed here support the '--help' flag.
 
-.B git hack
-- cut a new feature branch off the main branch
 
-.B git kill
-- remove an obsolete feature branch
+.SH "CONFIGURATION"
+Git Town will automatically prompt you for the main and non-feature branches
+of your current repository if they haven't been set.
 
-.B git pr
-- create a new pull request
+You may also manually view and modify the configurations:
 
-.B git prune-branches
-- delete merged branches
+.IP "git town config" 4
+View your current Git Town configuration
 
-.B git repo
-- view the repository homepage
+.IP "git town main-branch" 4
+View just your main branch configuration
 
-.B git ship
-- deliver a completed feature branch
+.IP "git town main-branch <branchname>" 4
+Set your main branch to <branchname>
 
-.B git sync
-- update the current branch with all relevant changes
+.IP "git town non-feature-branches" 4
+View just your non-feature branches
 
-.B git sync-fork
-- pull upstream updates into a forked repository
+.IP "git town non-feature-branches --add <branchname>" 4
+Add a new non-feature branch
+
+.IP "git town non-feature-branches --remove <branchname>" 4
+Remove branch from non-feature branches
