Updated release notes, added git-town.md

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -7,7 +7,7 @@
 .br
 \fIgit town\fR main-branch [<branchname>]
 .br
-\fIgit town\fR non-feature-branches [--add|--remove [<branchname>]]
+\fIgit town\fR non-feature-branches [(--add | --remove) <branchname>]
 .br
 \fIgit town\fR version
 
