--- a/man/man1/git-sync-fork.1
+++ b/man/man1/git-sync-fork.1
@@ -7,6 +7,8 @@ git sync-fork \- pull upstream updates into a forked repository
 \fIgit sync-fork\fR
 .br
 \fIgit sync-fork\fR --abort
+.br
+\fIgit sync-fork\fR --continue
 
 .SH "DESCRIPTION"
 Pulls updates from the upstream main branch into the main branch of this repository.
@@ -14,3 +16,6 @@ Pulls updates from the upstream main branch into the main branch of this reposit
 .SH "OPTIONS"
 .IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
+
+.IP "--continue" 4
+Continue the operation after resolving conflicts.
