--- a/man/man1/git-extract.1
+++ b/man/man1/git-extract.1
@@ -7,6 +7,8 @@ git extract \- copy selected commits from the current branch into their own bran
 \fIgit extract\fR <branchname> [<commit>...]
 .br
 \fIgit extract\fR --abort
+.br
+\fIgit extract\fR --continue
 
 .SH "DESCRIPTION"
 If no commits are provided, prompts the user to select from a list of commits unique to the current branch.
@@ -26,3 +28,6 @@ SHA to be cherry-picked into the new branch.
 
 .IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
+
+.IP "--continue" 4
+Continue the operation after resolving conflicts.
