git-town manpage header names

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -18,7 +18,7 @@ Git Town is a collection of additional Git commands that help implement higher-l
 For more information and full documentation, please visit: \fihttps://github.com/Originate/git-town\fR
 
 
-.SH "COMMANDS"
+.SH "GIT TOWN COMMANDS"
 \fBgit extract\fR         Copy selected commits from the current branch into their own branch
 .br
 \fBgit hack\fR            Cut a new feature branch off the main branch
@@ -40,7 +40,7 @@ For more information and full documentation, please visit: \fihttps://github.com
 All commands listed here support the '--help' flag.
 
 
-.SH "CONFIGURATION"
+.SH "CONFIGURATION COMMANDS"
 Git Town will automatically prompt you for the main and non-feature branches
 of your current repository if they haven't been set.
 
