Changes git-town manpage heading

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -18,7 +18,7 @@ Git Town is a collection of additional Git commands that help implement higher-l
 For more information and full documentation, please visit: \fihttps://github.com/Originate/git-town\fR
 
 
-.SH "GIT TOWN COMMANDS"
+.SH "GIT COMMANDS"
 \fBgit extract\fR         Copy selected commits from the current branch into their own branch
 .br
 \fBgit hack\fR            Cut a new feature branch off the main branch
