--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -47,16 +47,16 @@ of your current repository if they haven't been set.
 You may also manually view and modify the configurations:
 
 .IP "git town config" 4
-View your current Git Town configuration
+Displays your current Git Town configuration
 
 .IP "git town main-branch" 4
-View just your main branch configuration
+Displays just your main branch configuration
 
 .IP "git town main-branch <branchname>" 4
 Set your main branch to <branchname>
 
 .IP "git town non-feature-branches" 4
-View just your non-feature branches
+Displays just your non-feature branches
 
 .IP "git town non-feature-branches --add <branchname>" 4
 Add a new non-feature branch
