--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -50,13 +50,13 @@ You may also manually view and modify the configurations:
 Displays your current Git Town configuration
 
 .IP "git town main-branch" 4
-Displays just your main branch configuration
+Displays your main branch
 
 .IP "git town main-branch <branchname>" 4
 Set your main branch to <branchname>
 
 .IP "git town non-feature-branches" 4
-Displays just your non-feature branches
+Displays your non-feature branches
 
 .IP "git town non-feature-branches --add <branchname>" 4
 Add a new non-feature branch
