Finish resolving #98 - git town configuration and help
Squashed commit of the following:

commit 2481b13ba1a7dec59237de7759eadad690420b46
Merge: 3493ada c7a5a48
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Tue Dec 23 09:21:58 2014 -0800

    Merge branch 'master' into aw-finish-config

commit 3493ada5e70fb13c1137b0d7d50c0dd3369b7b3b
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Sat Dec 20 15:15:14 2014 -0800

    Remove "just"

commit 4b9b68c45afc7a18b308dfebaf8830b0c8635a5a
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Sat Dec 20 15:12:47 2014 -0800

    Clarify configuration in readme

commit 8ecad269f24856bab21784b126cdb6ace99ef377
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Sat Dec 20 15:08:12 2014 -0800

    Updated readme/manpage

commit b99f182f2a9746e7e9fa5a389deeb6124418a91d
Merge: c5e058b 96ec22f
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Sat Dec 20 14:49:32 2014 -0800

    Merge branch 'master' into aw-finish-config

commit c5e058b23ea6399d865cae81f065cb9e5ccf741f
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Sat Dec 20 12:10:20 2014 -0800

    Updated readme

commit 7d94599289e4e16bb34fe3b65c3b9dffab1911d2
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Sat Dec 20 12:03:25 2014 -0800

    Break up cucumber step

commit a10813017e29f4dd5246bdb17f11e6c542ec811f
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Fri Dec 19 18:06:38 2014 -0800

    Updated git-town.md to better follow git-remote's example

commit 12cf772a5b3855a0b42fdf17b7fac06f38fb799a
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Fri Dec 19 17:21:49 2014 -0800

    Typo

commit fa3784dff21807b580eedd4fee5c875b499b8930
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Fri Dec 19 17:21:16 2014 -0800

    Update readme

commit 439c0d6ce67d4c17d599c9486fe3ef5f485a1967
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Fri Dec 19 17:19:47 2014 -0800

    Changes git-town manpage heading

commit 9a15b1acd7e3e225d8d5927ea5787adc87ca82c4
Author: Allen Wu <allen.wu@ucla.edu>
Date:   Thu Dec 18 22:56:58 2014 -0800

    

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -1,40 +1,65 @@
 .TH "GIT-TOWN" "1" "12/02/2014" "Git Town 0\&.4\&.1" "Git Town Manual"
 
+.SH "SYNOPSIS"
+\fIgit town\fR config
+.br
+\fIgit town\fR help
+.br
+\fIgit town\fR main-branch [<branchname>]
+.br
+\fIgit town\fR non-feature-branches [(--add | --remove) <branchname>]
+.br
+\fIgit town\fR version
+
+
 .SH "DESCRIPTION"
-Git Town is a collection of additional Git commands that help implement
-higher-level Git workflows like GitHub flow:
+Git Town is a collection of additional Git commands that help implement higher-level Git workflows like GitHub Flow.
+
+For more information and full documentation, please visit: \fihttps://github.com/Originate/git-town\fR
+
+
+.SH "GIT COMMANDS"
+\fBgit extract\fR         Copy selected commits from the current branch into their own branch
 .br
-(\fIhttp://guides.github.com/introduction/flow/index.html\fR)
-
-For more information, please visit
+\fBgit hack\fR            Cut a new feature branch off the main branch
 .br
-\fihttps://github.com/Originate/git-town\fR
+\fBgit kill\fR            Remove an obsolete feature branch
+.br
+\fBgit pr\fR              Create a new pull request
+.br
+\fBgit prune-branches\fR  Delete merged branches
+.br
+\fBgit repo\fR            View the repository homepage
+.br
+\fBgit ship\fR            Deliver a completed feature branch
+.br
+\fBgit sync\fR            Update the current branch with all relevant changes
+.br
+\fBgit sync-fork\fR       Pull upstream updates into a forked repository
 
-.SH "COMMANDS"
+All commands listed here support the '--help' flag.
 
-.B git extract
-- copy selected commits from the current branch into their own branch
 
-.B git hack
-- cut a new feature branch off the main branch
+.SH "CONFIGURATION COMMANDS"
+Git Town will automatically prompt you for the main and non-feature branches
+of your current repository if they haven't been set.
 
-.B git kill
-- remove an obsolete feature branch
+You may also manually view and modify the configurations:
 
-.B git pr
-- create a new pull request
+.IP "git town config" 4
+Displays your current Git Town configuration
 
-.B git prune-branches
-- delete merged branches
+.IP "git town main-branch" 4
+Displays your main branch
 
-.B git repo
-- view the repository homepage
+.IP "git town main-branch <branchname>" 4
+Set your main branch to <branchname>
 
-.B git ship
-- deliver a completed feature branch
+.IP "git town non-feature-branches" 4
+Displays your non-feature branches
 
-.B git sync
-- update the current branch with all relevant changes
+.IP "git town non-feature-branches --add <branchname>" 4
+Add a new non-feature branch
 
-.B git sync-fork
-- pull upstream updates into a forked repository
+.IP "git town non-feature-branches --remove <branchname>" 4
+Remove branch from non-feature branches
