Git Town command for installing Fish shell

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -5,6 +5,8 @@
 .br
 \fIgit town\fR help
 .br
+\fIgit town\fR install-fish-autocompletion
+.br
 \fIgit town\fR main-branch [<branchname>]
 .br
 \fIgit town\fR non-feature-branches [(--add | --remove) <branchname>]
@@ -48,6 +50,9 @@ You may also manually view and modify the configurations:
 
 .IP "git town config" 4
 Displays your current Git Town configuration
+
+.IP "git town install-fish-autocompletion" 4
+Installs the autocompletion definition for [Fish shell](http://fishshell.com)
 
 .IP "git town main-branch" 4
 Displays your main branch
