More compressed command-line option descriptions

--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -6,9 +6,7 @@ git hack \- cut a new feature branch off the main branch
 .SH "SYNOPSIS"
 \fIgit hack\fR <branchname>
 .br
-\fIgit hack\fR --abort
-.br
-\fIgit hack\fR --continue
+\fIgit hack\fR --abort | --continue
 
 .SH "DESCRIPTION"
 Sync the main branch and create a new feature branch with the given name.
