--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -6,7 +6,7 @@ git ship \- deliver a completed feature branch
 .SH "SYNOPSIS"
 \fIgit ship\fR [<branchname>] [<commit-options>]
 .br
-\fIgit ship\fR --abort | --continue
+\fIgit ship\fR (--abort | --continue)
 
 .SH "DESCRIPTION"
 Squash merges the current branch, or <branchname> if given,
