--- a/man/man1/git-extract.1
+++ b/man/man1/git-extract.1
@@ -6,7 +6,7 @@ git extract \- copy selected commits from the current branch into their own bran
 .SH "SYNOPSIS"
 \fIgit extract\fR <branchname> [<commit>...]
 .br
-\fIgit extract\fR --abort | --continue
+\fIgit extract\fR (--abort | --continue)
 
 .SH "DESCRIPTION"
 If no commits are provided, prompts the user to select from a list of commits unique to the current branch.
