--- a/man/man1/git-sync-fork.1
+++ b/man/man1/git-sync-fork.1
@@ -6,7 +6,7 @@ git sync-fork \- pull upstream updates into a forked repository
 .SH "SYNOPSIS"
 \fIgit sync-fork\fR
 .br
-\fIgit sync-fork\fR --abort | --continue
+\fIgit sync-fork\fR (--abort | --continue)
 
 .SH "DESCRIPTION"
 Pulls updates from the upstream main branch into the main branch of this repository.
