--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -6,11 +6,7 @@ git sync \- update the current branch with all relevant changes
 .SH "SYNOPSIS"
 \fIgit sync\fR [--all]
 .br
-\fIgit sync\fR --abort
-.br
-\fIgit sync\fR --continue
-.br
-\fIgit sync\fR --skip
+\fIgit sync\fR (--abort | --continue | --skip)
 
 .SH "DESCRIPTION"
 Synchronizes the current branch with the rest of the world.
