--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -5,6 +5,8 @@
 .br
 \fIgit town\fR help
 .br
+\fIgit town\fR install-fish-autocompletion
+.br
 \fIgit town\fR main-branch [<branchname>]
 .br
 \fIgit town\fR non-feature-branches [(--add | --remove) <branchname>]
@@ -54,6 +56,9 @@ Cleanly remove all Git Town configuration from the current repository
 
 .IP "git town config --setup" 4
 Run the Git Town configuration wizard
+
+.IP "git town install-fish-autocompletion" 4
+Installs the autocompletion definition for [Fish shell](http://fishshell.com)
 
 .IP "git town main-branch" 4
 Displays your main branch
