--- a/man/man1/git-pr.1
+++ b/man/man1/git-pr.1
@@ -1,10 +1,10 @@
-.TH "GIT-PR" "1" "01/09/2015" "Git Town 0\&.5\&.0" "Git Town Manual"
+.TH "GIT-PULL-REQUEST" "1" "01/09/2015" "Git Town 0\&.5\&.0" "Git Town Manual"
 
 .SH "NAME"
-git-pr \- create a new pull request
+git-pull-request \- create a new pull request
 
 .SH "SYNOPSIS"
-\fIgit pr\fR
+\fIgit pull-request\fR
 
 .SH "DESCRIPTION"
 Opens a browser to a new pull request for the current branch.
