--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -27,7 +27,7 @@ For more information and full documentation, please visit: \fihttps://github.com
 .br
 \fBgit kill\fR            Remove an obsolete feature branch
 .br
-\fBgit pr\fR              Create a new pull request
+\fBgit pull-request\fR    Create a new pull request
 .br
 \fBgit prune-branches\fR  Delete merged branches
 .br
