Fixed broken link and man page cleanup

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -58,7 +58,7 @@ Cleanly remove all Git Town configuration from the current repository
 Run the Git Town configuration wizard
 
 .IP "git town install-fish-autocompletion" 4
-Installs the autocompletion definition for [Fish shell](http://fishshell.com)
+Installs the autocompletion definition for Fish shell
 
 .IP "git town main-branch" 4
 Displays your main branch
