--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -21,23 +21,23 @@ For more information and full documentation, please visit: \fihttps://github.com
 
 
 .SH "GIT COMMANDS"
-\fBgit extract\fR         Copy selected commits from the current branch into their own branch
+\fBgit create-pull-request\fR  Create a new pull request
 .br
-\fBgit hack\fR            Cut a new feature branch off the main branch
+\fBgit extract\fR              Copy selected commits from the current branch into their own branch
 .br
-\fBgit kill\fR            Remove an obsolete feature branch
+\fBgit hack\fR                 Cut a new feature branch off the main branch
 .br
-\fBgit prune-branches\fR  Delete merged branches
+\fBgit kill\fR                 Remove an obsolete feature branch
 .br
-\fBgit pull-request\fR    Create a new pull request
+\fBgit prune-branches\fR       Delete merged branches
 .br
-\fBgit repo\fR            View the repository homepage
+\fBgit repo\fR                 View the repository homepage
 .br
-\fBgit ship\fR            Deliver a completed feature branch
+\fBgit ship\fR                 Deliver a completed feature branch
 .br
-\fBgit sync\fR            Update the current branch with all relevant changes
+\fBgit sync\fR                 Update the current branch with all relevant changes
 .br
-\fBgit sync-fork\fR       Pull upstream updates into a forked repository
+\fBgit sync-fork\fR            Pull upstream updates into a forked repository
 
 All commands listed here support the '--help' flag.
 
