Rename to new-pull-request

--- a/man/man1/git-create-pull-request.1
+++ b/man/man1/git-create-pull-request.1
@@ -1,10 +1,10 @@
-.TH "GIT-CREATE-PULL-REQUEST" "1" "04/02/2015" "Git Town 0\&.6\&.0" "Git Town Manual"
+.TH "GIT-NEW-PULL-REQUEST" "1" "04/02/2015" "Git Town 0\&.6\&.0" "Git Town Manual"
 
 .SH "NAME"
-git-create-pull-request \- create a new pull request
+git-new-pull-request \- create a new pull request
 
 .SH "SYNOPSIS"
-\fIgit create-pull-request\fR
+\fIgit new-pull-request\fR
 
 .SH "DESCRIPTION"
 Opens a browser to a new pull request for the current branch.
