--- a/man/man1/git-rename-branch.1
+++ b/man/man1/git-rename-branch.1
@@ -9,7 +9,7 @@ git-rename-branch \- rename a branch both locally and remotely
 .SH "DESCRIPTION"
 Renames the given branch on both the local machine and the remote if one is configured.
 .br
-Aborts if the new branch name already exists.
+Aborts if the new branch name already exists or the tracking branch is out of sync.
 .br
 This command is intended for feature branches. Renaming non-feature branches has to be confirmed with the `-f` option.
 .PP
