--- a/man/man1/git-kill.1
+++ b/man/man1/git-kill.1
@@ -12,7 +12,7 @@ git kill \- remove an obsolete feature branch
 Deletes the current branch, or <branchname> if given,
 from the local and remote repositories.
 .br
-Does not delete non-feature branches nor the main branch.
+Does not delete perennial branches nor the main branch.
 
 .SH "OPTIONS"
 .IP "<branchname>" 4
