--- a/man/man1/git-rename-branch.1
+++ b/man/man1/git-rename-branch.1
@@ -11,7 +11,7 @@ Renames the given branch on both the local machine and the remote if one is conf
 .br
 Aborts if the new branch name already exists or the tracking branch is out of sync.
 .br
-This command is intended for feature branches. Renaming non-feature branches has to be confirmed with the `-f` option.
+This command is intended for feature branches. Renaming perennial branches has to be confirmed with the `-f` option.
 .PP
 * Creates a branch with the new name
 .br
@@ -27,10 +27,10 @@ When there is a tracking branch
 .br
 * Deletes the old branch from the remote repository
 .PP
-When run on a non-feature branch
+When run on a perennial branch
 * Requires the use of the `-f` option
 .br
-* Reconfigures git-town locally for the non-feature branch
+* Reconfigures git-town locally for the perennial branch
 .br
 
 .SH "OPTIONS"
@@ -41,4 +41,4 @@ The name of the branch to rename.
 The new name of the branch.
 
 .IP "-f" 4
-Forces the renaming of a non-feature branch
+Forces the renaming of a perennial branch
