--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -23,7 +23,7 @@ When run on a feature branch
 * pushes the current branch
 
 .PP
-When run on the main branch or a non-feature branch
+When run on the main branch or a perennial branch
 .br
 * pulls and pushes updates for the current branch
 .br
