--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -9,7 +9,7 @@
 .br
 \fIgit town\fR main-branch [<branchname>]
 .br
-\fIgit town\fR non-feature-branches [(--add | --remove) <branchname>]
+\fIgit town\fR perennial-branches [(--add | --remove) <branchname>]
 .br
 \fIgit town\fR version
 
@@ -43,7 +43,7 @@ All commands listed here support the '--help' flag.
 
 
 .SH "CONFIGURATION COMMANDS"
-Git Town will automatically prompt you for the main and non-feature branches
+Git Town will automatically prompt you for the main and perennial branches
 of your current repository if they haven't been set.
 
 You may also manually view and modify the configurations:
@@ -66,11 +66,11 @@ Displays your main branch
 .IP "git town main-branch <branchname>" 4
 Set your main branch to <branchname>
 
-.IP "git town non-feature-branches" 4
-Displays your non-feature branches
+.IP "git town perennial-branches" 4
+Displays your perennial branches
 
-.IP "git town non-feature-branches --add <branchname>" 4
-Add a new non-feature branch
+.IP "git town perennial-branches --add <branchname>" 4
+Add a new perennial branch
 
-.IP "git town non-feature-branches --remove <branchname>" 4
-Remove branch from non-feature branches
+.IP "git town perennial-branches --remove <branchname>" 4
+Remove branch from perennial branches
