--- a/man/man1/git-new-pull-request.1
+++ b/man/man1/git-new-pull-request.1
@@ -7,6 +7,6 @@ git-new-pull-request \- create a new pull request
 \fIgit new-pull-request\fR
 
 .SH "DESCRIPTION"
-Opens a browser to a new pull request for the current branch.
+Opens a browser to the "new pull request" page for the current branch on the code hosting platform.
 .br
 Supported only for repositories hosted on GitHub and Bitbucket.
