--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -14,11 +14,11 @@ Synchronizes the current branch with the rest of the world.
 .PP
 When run on a feature branch
 .br
-* syncs the main branch
+* syncs all ancestor branches including the main branch
 .br
 * pulls updates for the current branch
 .br
-* merges the main branch into the current branch
+* merges the parent branch into the current branch
 .br
 * pushes the current branch
 
